--- a/index.html
+++ b/index.html
@@ -15,19 +15,19 @@
       padding: 16px;
       margin-bottom: 8px;
     }
-</style>
     body {
       text-align: center;
     }
+</style>
 </head>
-<body>
   <section>
 </head>
+
 <body>
   <img src="icon.png" alt="tanyaのアイコン画像です">
   <h1>tanya</h1>
   <p>自由に想像と創造を</p>
 </body>
   </section>
-  <footer>© 2023 tanya.prj</footer>
+  <footer>© 2023 tanya.project</footer>
 </html>
